bug fix when the register is deleted

--- a/src/WebApplication4/Views/FoodCalculators/Create.cshtml
+++ b/src/WebApplication4/Views/FoodCalculators/Create.cshtml
@@ -208,8 +208,11 @@
 
         $('#tbFoodB').on('click', '#delete', function () {
             $(this).parent().parent().remove();
-            sumCalories = sumCalories + ruleCalories;
-            sumLipids = sumLipids + ruleLipids;
+            sumCalories = sumCalories - ruleCalories;
+            sumLipids = sumLipids - ruleLipids;
+
+            $('.totalLipds').text('Total: ' + sumLipids);
+            $('.totalCalories').text('Total :' + sumCalories);
 
         });
 
