--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -104,15 +104,16 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => regist.MealName)
                                 </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => regist.quantity)
+                               <!-- <td>
+                                    Html.DisplayFor(modelItem => regist.quantity)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => regist.totalLipids)
+                                    Html.DisplayFor(modelItem => regist.totalLipids)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => regist.totalCalories)
+                                    Html.DisplayFor(modelItem => regist.totalCalories)
                                 </td>
+                                -->
                                 <td>
                                     @Html.DisplayFor(modelItem => regist.recordDate)
                                 </td>
