--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -32,15 +32,16 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <!--<li><a asp-controller="Home" asp-action="Index">Home</a></li>-->
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-                        <!--<li><a asp-controller="Foods" asp-action="Index">Foods</a></li> -->
                         @if (User.Identity.IsAuthenticated)
                         {
-
                             <li><a asp-controller="Meals" asp-action="Create">FoodCalculator</a></li>
+                            <li><a asp-controller="Meals" asp-action="Index">All Meals</a></li>
+                            <li><a asp-controller="PhysicalInfoRecords" asp-action="Index">Physical Regists</a></li>
                         }
+                        
+                        <li><a asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                       
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
