--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
                 <table class="table" style="background-color:#F8F8F8">
                     <thead style="color:black">
                         <tr>
-                            <th>Food</th>
+                            <th>Meal</th>
                             <th>Lipids</th>
                             <th>Caloiries</th>
                             <th>Date</th>
