--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
             </div>
 
             <div  class="top-left table-responsive col-md-8">
-                <h3>Physical Info History (Last 3 days) </h3>
+                <h3>Meal History (Last 3 days) </h3>
                 <table class="table" style="background-color:#F8F8F8">
                     <thead style="color:black">
                         <tr>
