--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -101,7 +101,7 @@
                         {
                             <tr>
                                 <td>
-                                    <a asp-action="Details" asp-route-id="@regist.Id">
+                                    <a asp-controller="Meals" asp-action="Details" asp-route-id="@regist.Id">
                                         @Html.DisplayFor(modelItem => regist.MealName)
                                     </a>
                                 </td>
