--- a/src/WebApplication4/Views/Meals/Details.cshtml
+++ b/src/WebApplication4/Views/Meals/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>@Model.meal.MealName  @Model.meal.recordDate.Date</h2>
+<h2>@Model.meal.MealName  @Model.meal.recordDate</h2>
 
 <div class="top-left col-md-offset-2 col-md-8">
     <h3>Meal Info </h3>
